<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/billAmountLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="11dp"
        android:text="@string/labelBillAmount"
        app:layout_constraintBaseline_toBaselineOf="@+id/editTextNumberDecimal"
        app:layout_constraintEnd_toStartOf="@+id/editTextNumberDecimal"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/percentLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="27dp"
        android:layout_marginTop="39dp"
        android:layout_marginEnd="74dp"
        android:text="@string/labelPercent"
        app:layout_constraintEnd_toStartOf="@+id/percentTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/billAmountLabel" />

    <TextView
        android:id="@+id/tipLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="30dp"
        android:text="@string/labelTip"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/percentLabel" />

    <TextView
        android:id="@+id/totalLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="28dp"
        android:text="@string/labelTotalAmount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tipLabel" />

    <EditText
        android:id="@+id/editTextNumberDecimal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="74dp"
        android:ems="10"
        android:hint="@string/hints"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/tipTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/billAmountLabel"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/percentTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="18dp"
        android:text="@string/tvPercent"
        app:layout_constraintBaseline_toBaselineOf="@+id/buttonUp"
        app:layout_constraintEnd_toStartOf="@+id/buttonUp"
        app:layout_constraintStart_toEndOf="@+id/percentLabel" />

    <TextView
        android:id="@+id/tipTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="28dp"
        android:text="@string/tipAmount"
        app:layout_constraintBottom_toTopOf="@+id/totalTextView"
        app:layout_constraintEnd_toStartOf="@+id/buttonUp" />

    <TextView
        android:id="@+id/totalTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="244dp"
        android:layout_marginEnd="3dp"
        android:text="@string/totalAmount"
        app:layout_constraintEnd_toEndOf="@+id/tipTextView"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonUp"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="16dp"
        android:text="@string/increase"
        android:textSize="@dimen/text_size"
        app:layout_constraintBottom_toTopOf="@+id/tipTextView"
        app:layout_constraintEnd_toStartOf="@+id/buttonDown"
        app:layout_constraintStart_toEndOf="@+id/percentTextView"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumberDecimal" />

    <Button
        android:id="@+id/buttonDown"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginEnd="16dp"
        android:text="@string/decrease"
        android:textSize="@dimen/text_size"
        app:layout_constraintBottom_toBottomOf="@+id/buttonUp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonUp"
        app:layout_constraintTop_toTopOf="@+id/buttonUp" />
</androidx.constraintlayout.widget.ConstraintLayout>